--- a/code/life_expectancy.ipynb
+++ b/code/life_expectancy.ipynb
@@ -50,7 +50,7 @@
     "- The life expectancy can be described by the features in the dataset. \n",
     " \n",
     "\n",
-    "* Using the data provided, Group F builds a life expectancy prediction model that is able to provide approximate salaries for job seekers based on their education level, industry, major and proximity to a metropolitan area. \n",
+    "* Using the data provided, Group F builds a life expectancy prediction model that is able to provide approximate expected life span based on the features provided. \n",
     "\n",
     "* A linear regression model is built to model life expectancy based on the features provided.\n",
     "* Root Mean Squared Error is used as an evaluation metric. \n"
