--- a/code/life_expectancy.ipynb
+++ b/code/life_expectancy.ipynb
@@ -1057,7 +1057,8 @@
     "<ins>**Observations**:<ins>\n",
     "\n",
     "- This data is right tailed but seem to follow a normal distribution pattern. \n",
-    "- The life expectancy for most countries increases steadily from late thirties to late eighties"
+    "- The life expectancy steadily from late thirties to mis seventies before reducing in the rate of increase. \n",
+    "- By far, life expectancy between 70 and 75 seems the most frequent in the database. "
    ]
   },
   {
@@ -1112,7 +1113,7 @@
     "- While we find Adult Mortality to be strongly negatively correlated with life expectancy, it seems to be an obvious reason because more adult deaths mean a lower life expectancy. \n",
     "- HIV/AIDs has the second strongest negative correlation with life expectancy while Schooling has the strongest positive correlation with life expectancy.  \n",
     "- Interestingly, higher intakes alcohol, diphtheria and BMI result in a higher life expectancy. \n",
-    "- Population has the highest percentage of missing values yet its correlation influence is not significant. "
+    "- Population has the highest percentage of missing values yet its influence on the target variable is not significant. "
    ]
   },
   {
@@ -1207,11 +1208,11 @@
    "source": [
     "<ins>**Observations**:<ins>\n",
     "\n",
-    "We use a statistical test to verify whether life expectancy has a normal distribution or not. A p- value smaller than 0.05 means the null hypothesis is rejected. As such, a p-value of 0.05 or greater means that the distribution is a normal distribution. \n",
+    "* We use a statistical test to verify whether life expectancy has a normal distribution or not. A p- value smaller than 0.05 means the null hypothesis is rejected. As such, a p-value of 0.05 or greater means that the distribution is a normal distribution. \n",
     "\n",
-    "Life expectancy, therefore, does follow a normal distribution. \n",
+    "* Life expectancy, therefore, does follow a normal distribution. \n",
     "\n",
-    "A Shapiro-Wilk test is also used to confirm if the data has been drawn from a normal distribution or not. The results are similar to observations made using the D’Agostino’s K^2 Test. "
+    "* A Shapiro-Wilk test is also used to confirm if the data has been drawn from a normal distribution or not. The results are similar to observations made using the D’Agostino’s K^2 Test. "
    ]
   },
   {
